# pipeline-carros

./: README.md  pyproject.toml
app-flask/: app.py
app-flask/templates/: form.html  index.html
dados/: carros_bruto.csv  carros_transformado.csv
exploratoria/: exploratoria.ipynb
models/: model-LR-R2.pkl
pipeline_etl/: etl.py  log_etl.txt
pipeline_ml/: pipeline_ml.py
