[project]
name = "pipeline-carros"
version = "0.1.0"
description = "Pipeline ETL e ML de carros"
authors = [
    {name = "PedroJoas",email = "pjoas26@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "pandas (>=2.3.1,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "flask (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
